# debug-assist

./: README.md  SKILL.md  pyproject.toml
.github/workflows/: integration.yml  lint.yml
references/: debug-lifecycle.md  debugger-strategies.md  logging-patterns.md  parallel-debug-agents.md
tests/: conftest.py  test_references.py  test_scenarios.py  test_schema.py
tests/fixtures/: repo_builders.py
